--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/special/colors';
-
 :host {
     display: inline-block;
     position: relative;
@@ -11,7 +9,7 @@
     position: absolute;
     width: 6px;
     height: 6px;
-    background: $color-active;
+    background: var(--bs-blue);
     border-radius: 50%;
     animation: loader 1.2s linear infinite;
 }
