--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -1,5 +1,3 @@
-@import '../../../styles/special/colors';
-
 :host {
     display: flex;
     user-select: none;
@@ -14,15 +12,15 @@
 
         &__item {
             margin: 3px;
-            background: $color-secondary;
+            background: var(--bs-gray-200);
             padding: 5px 7px;
             cursor: pointer;
             min-width: 40px;
             text-align: center;
 
             &--active {
-                background: $color-active;
-                color: $color-primary;
+                background: var(--bs-blue);
+                color: var(--bs-white);
             }
 
             &--nav {
