--- a/src/styles/posts-table.scss
+++ b/src/styles/posts-table.scss
@@ -1,5 +1,3 @@
-@import 'special/colors';
-
 :host {
     max-width: 100%;
 
@@ -8,7 +6,7 @@
         min-width: 100%;
 
         &, &__cell {
-            border: 1px solid $color-secondary;
+            border: 1px solid var(--bs-gray-200);
             border-collapse: collapse;
         }
 
