--- a/src/styles/search-filters.scss
+++ b/src/styles/search-filters.scss
@@ -1,5 +1,3 @@
-@import 'special/colors';
-
 .search-filters {
     &__list {
         margin: -5px;
@@ -12,11 +10,11 @@
 
     &__input {
         border-radius: 0;
-        border: 1px solid $color-secondary;
+        border: 1px solid var(--bs-gray-200);
 
     }
 
     select.search-filters__input {
-        background: $color-primary;
+        background: var(--bs-white);
     }
 }
