--- a/src/styles/albums-list.scss
+++ b/src/styles/albums-list.scss
@@ -1,5 +1,4 @@
 .albums-list {
-
     --rowItems: 4;
     --offset: 5px;
 
@@ -13,7 +12,16 @@
     }
 
     &__entry {
+        min-height: 132px;
+        min-width: 0;
+        flex-grow: 0;
+        flex-shrink: 1;
         flex-basis: calc(100% / var(--rowItems));
         padding: var(--offset);
+
+        &--empty {
+            min-height: 0;
+            padding: 0;
+        }
     }
 }
