--- a/src/app/components/album-entry/album-entry.component.html
+++ b/src/app/components/album-entry/album-entry.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="album-entry__footer">
         By
-        <a [routerLink]="['/user/' + album.userId]">
+        <a [routerLink]="['/users/' + album.userId]">
             User {{ album.userId }}
         </a>
     </div>
