--- a/src/app/components/album-entry/album-entry.component.scss
+++ b/src/app/components/album-entry/album-entry.component.scss
@@ -1,25 +1,33 @@
 @import '../../../styles/album-entry-images';
 
 :host {
-    display: flex;
-    flex-direction: column;
     background: var(--bs-gray-100);
     border: 1px solid var(--bs-gray-200);
     width: 100%;
 
     .album-entry {
+        &__content {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+
         &__header,
         &__footer {
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
-            background: var(--bs-gray-100);
+            background: var(--bs-gray-200);
         }
 
         &__header,
         &__footer,
         &__main {
-            padding: 10px;
+            padding: 5px 10px;
+        }
+
+        &__main {
+            flex-grow: 1;
         }
     }
 }
