--- a/src/styles/albums-list.scss
+++ b/src/styles/albums-list.scss
@@ -12,7 +12,7 @@
     }
 
     &__entry {
-        min-height: 132px;
+        min-height: 150px;
         min-width: 0;
         flex-grow: 0;
         flex-shrink: 1;
@@ -23,5 +23,10 @@
             min-height: 0;
             padding: 0;
         }
+    }
+
+    &__album {
+        display: block;
+        height: 100%;
     }
 }
