--- a/src/app/components/album-entry/album-entry.component.html
+++ b/src/app/components/album-entry/album-entry.component.html
@@ -8,16 +8,24 @@
         <div class="album-entry__images album-entry-images">
             <ul class="album-entry-images__items">
                 <li class="album-entry-images__entry">
-                    <img class="album-entry-images__image">
+                    <div class="album-entry-images__image-wrapper">
+                        <img class="album-entry-images__image">
+                    </div>
                 </li>
                 <li class="album-entry-images__entry">
-                    <img class="album-entry-images__image">
+                    <div class="album-entry-images__image-wrapper">
+                        <img class="album-entry-images__image">
+                    </div>
                 </li>
                 <li class="album-entry-images__entry">
-                    <img class="album-entry-images__image">
+                    <div class="album-entry-images__image-wrapper">
+                        <img class="album-entry-images__image">
+                    </div>
                 </li>
                 <li class="album-entry-images__entry">
-                    <img class="album-entry-images__image">
+                    <div class="album-entry-images__image-wrapper">
+                        <img class="album-entry-images__image">
+                    </div>
                 </li>
             </ul>
         </div>
