--- a/src/app/components/album-entry/album-entry.component.scss
+++ b/src/app/components/album-entry/album-entry.component.scss
@@ -28,6 +28,12 @@
 
         &__main {
             flex-grow: 1;
+            display: flex;
+            align-items: center;
+        }
+
+        &__images {
+            width: 100%;
         }
     }
 }
