--- a/src/styles/album-entry-images.scss
+++ b/src/styles/album-entry-images.scss
@@ -1,16 +1,30 @@
 .album-entry-images {
-
     --rowItems: 4;
 
     &__items {
+        height: 100%;
         padding-left: 0;
-        margin: 0;
+        margin: -5px;
         display: flex;
-        flex-wrap: wrap;
         list-style-type: none;
+        justify-content: space-around;
+        align-items: center;
     }
 
     &__entry {
-        flex-basis: calc(100% / var(--rowItems));
+        flex-basis: 60px;
+        padding: 5px;
+    }
+
+    &__image-wrapper {
+        max-width: 50px;
+        padding-top: 100%;
+        position: relative;
+        background: var(--bs-gray-400);
+
+    }
+
+    &__image {
+        position: absolute;
     }
 }
