--- a/src/app/components/photo-entry/photo-entry.component.scss
+++ b/src/app/components/photo-entry/photo-entry.component.scss
@@ -9,5 +9,17 @@
             display: flex;
             flex-direction: column;
         }
+
+        &__image-wrapper {
+            padding-top: 100%;
+            position: relative;
+        }
+
+        &__image {
+            position: absolute;
+            inset: 0;
+            width: 100%;
+            height: auto;
+        }
     }
 }
