--- a/src/app/components/photo-entry/photo-entry.component.scss
+++ b/src/app/components/photo-entry/photo-entry.component.scss
@@ -21,5 +21,16 @@
             width: 100%;
             height: auto;
         }
+
+        &__title {
+            padding: 5px 10px;
+        }
+
+        &__link {
+            display: block;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
     }
 }
