improved photo page

--- a/src/app/components/page-photo/page-photo.component.html
+++ b/src/app/components/page-photo/page-photo.component.html
@@ -2,14 +2,13 @@
     <app-layout-page>
         <ng-container title>{{ (photo$ | async)?.title }}</ng-container>
         <div class="page-photo__content">
-            By
             <a [routerLink]="['/albums/' + (photo$ | async)?.albumId ]">
                 View Album
             </a>
 
             <div class="page-photo__image-wrapper">
-                <img [src]="(photo$ | async)?.url">
-
+                <img class="page-photo__image"
+                    [src]="(photo$ | async)?.url">
             </div>
         </div>
     </app-layout-page>
