--- a/src/app/components/page-photo/page-photo.component.scss
+++ b/src/app/components/page-photo/page-photo.component.scss
@@ -5,5 +5,9 @@
             display: flex;
             justify-content: center;
         }
+
+        &__image {
+            max-width: 100%;
+        }
     }
 }
