--- a/src/app/components/page-album/page-album.component.html
+++ b/src/app/components/page-album/page-album.component.html
@@ -1,5 +1,5 @@
 <div class="page__content">
-    <app-layout-page>
+    <app-layout-page-generic>
         <ng-container title>{{ (album$ | async)?.title }}</ng-container>
         <div class="page-album__content">
             By
@@ -30,5 +30,5 @@
                 </ul>
             </div>
         </div>
-    </app-layout-page>
+    </app-layout-page-generic>
 </div>
