--- a/src/app/components/page-albums/page-albums.component.html
+++ b/src/app/components/page-albums/page-albums.component.html
@@ -1,5 +1,5 @@
 <div class="page__content">
-    <app-layout-page>
+    <app-layout-page-generic>
         <ng-container title>Albums</ng-container>
 
         <div class="page__search-wrapper">
@@ -50,5 +50,5 @@
                 <app-loader></app-loader>
             </div>
         </div>
-    </app-layout-page>
+    </app-layout-page-generic>
 </div>
