--- a/src/app/components/page-photos/page-photos.component.html
+++ b/src/app/components/page-photos/page-photos.component.html
@@ -1,5 +1,5 @@
 <div class="page__content">
-    <app-layout-page>
+    <app-layout-page-generic>
         <ng-container title>Photos</ng-container>
         <div class="page__search-wrapper">
             <div class="search-filters">
@@ -49,5 +49,5 @@
                 <app-loader></app-loader>
             </div>
         </div>
-    </app-layout-page>
+    </app-layout-page-generic>
 </div>
