--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,11 +1,12 @@
-<div class="page__content page__content--no-grow page-dashboard__banner main-banner">
-    <h3 class="main-banner__pre-title">
-        Welcome to
-    </h3>
-    <h1 class="main-banner__title">
-        My App
-    </h1>
-</div>
-<div class="page__content ">
-    Dashboard will be here
-</div>
+<!-- <div class="page__content page__content--no-grow page-dashboard__banner main-banner"> -->
+<!--     <h3 class="main-banner__pre-title"> -->
+<!--         Welcome to -->
+<!--     </h3> -->
+<!--     <h1 class="main-banner__title"> -->
+<!--         My App -->
+<!--     </h1> -->
+<!-- </div> -->
+<!-- <div class="page__content "> -->
+<!--     Dashboard will be here -->
+<!-- </div> -->
+Dashboard will be here
