--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -1,5 +1,5 @@
 <div class="page__content">
-    <app-layout-page>
+    <app-layout-page-generic>
         <ng-container title>Posts</ng-container>
 
         <div class="page__search-wrapper">
@@ -107,5 +107,5 @@
                 <app-loader></app-loader>
             </div>
         </div>
-    </app-layout-page>
+    </app-layout-page-generic>
 </div>
