--- a/src/app/components/page-user/page-user.component.html
+++ b/src/app/components/page-user/page-user.component.html
@@ -1,1 +1,6 @@
-User will be here
+<app-layout-page-bold-header>
+    <ng-container title>
+        User
+    </ng-container>
+    User will be here
+</app-layout-page-bold-header>
