--- a/src/app/components/layout-page-bold-header/layout-page-bold-header.component.html
+++ b/src/app/components/layout-page-bold-header/layout-page-bold-header.component.html
@@ -1,7 +1,6 @@
-<app-breadcrumbs></app-breadcrumbs>
-<h1 class="layout-page__title">
+<div class="page__content page__content--no-grow page-dashboard__banner main-banner">
     <ng-content select="[title]"></ng-content>
-</h1>
+</div>
 <div class="layout-page__content">
     <ng-content></ng-content>
 </div>
