--- a/src/app/components/layout-page-bold-header/layout-page-bold-header.component.html
+++ b/src/app/components/layout-page-bold-header/layout-page-bold-header.component.html
@@ -1,6 +1,6 @@
-<div class="page__content page__content--no-grow page-dashboard__banner main-banner">
+<div class="page__header">
     <ng-content select="[title]"></ng-content>
 </div>
-<div class="layout-page__content">
+<div class="page__content">
     <ng-content></ng-content>
 </div>
