--- a/src/app/components/page-album/page-album.component.html
+++ b/src/app/components/page-album/page-album.component.html
@@ -7,7 +7,7 @@
                 User {{ (album$ | async)?.userId }}
             </a>
 
-            <div class="page__search-wrapper">
+            <div class="app-layout__search-wrapper">
                 <div class="search-filters">
                     <div class="search-filters__list">
                         <input class="search-filters__entry search-filters__input"
