--- a/src/app/components/page-posts/page-posts.component.html
+++ b/src/app/components/page-posts/page-posts.component.html
@@ -2,7 +2,7 @@
     <app-layout-page-generic>
         <ng-container title>Posts</ng-container>
 
-        <div class="page__search-wrapper">
+        <div class="app-layout__search-wrapper">
             <div class="search-filters">
                 <div class="search-filters__list">
                     <input class="search-filters__entry search-filters__input"
