--- a/src/styles/app-layout.scss
+++ b/src/styles/app-layout.scss
@@ -45,4 +45,8 @@
         align-items: center;
         background: var(--bs-white);
     }
+
+    &__search-wrapper {
+        padding: 10px 0;
+    }
 }
