--- a/src/app/components/page-photos/page-photos.component.html
+++ b/src/app/components/page-photos/page-photos.component.html
@@ -1,7 +1,7 @@
 <div class="page__content">
     <app-layout-page-generic>
         <ng-container title>Photos</ng-container>
-        <div class="page__search-wrapper">
+        <div class="app-layout__search-wrapper">
             <div class="search-filters">
                 <div class="search-filters__list">
                     <input class="search-filters__entry search-filters__input"
