--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -1,11 +1,13 @@
 <app-layout-page-bold-header>
     <ng-container title>
-        <h3 class="main-banner__pre-title">
-            Welcome to
-        </h3>
-        <h1 class="main-banner__title">
-            My App
-        </h1>
+        <div class="main-banner">
+            <h3 class="main-banner__pre-title">
+                Welcome to
+            </h3>
+            <h1 class="main-banner__title">
+                My App
+            </h1>
+        </div>
     </ng-container>
     Dashboard will be here
 </app-layout-page-bold-header>
