--- a/src/styles/user-banner.scss
+++ b/src/styles/user-banner.scss
@@ -1,18 +1,17 @@
-.main-banner {
-    background: var(--bs-indigo);
-    color: var(--bs-white);
+.user-banner {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
 
-    &__pre-title {
+    &__name {
         margin: 0;
-        font-size: 17px;
+        font-size: 40px;
     }
 
-    &__title {
+    &__description {
         margin: 13px 0 0 0;
-        font-size: 40px;
+        font-size: 15px;
+        color: rgb(var(--bs-gray-200) / 50%);
     }
 }
