--- a/src/app/components/page-user/page-user.component.html
+++ b/src/app/components/page-user/page-user.component.html
@@ -20,7 +20,8 @@
                     *ngIf="albums$ | async as albums">
                     <li class="scrollable-list__entry"
                         *ngFor="let album of albums">
-                        <a [routerLink]="['/albums/' + album.id]">
+                        <a class="scrollable-list__line"
+                            [routerLink]="['/albums/' + album.id]">
                             {{ album.title }}
                         </a>
                     </li>
@@ -36,10 +37,11 @@
                     *ngIf="posts$ | async as posts">
                     <li class="scrollable-list__entry"
                         *ngFor="let post of posts">
-                        <a [routerLink]="['/posts/' + post.id]">
+                        <a class="scrollable-list__line"
+                            [routerLink]="['/posts/' + post.id]">
                             {{ post.title }}
                         </a>
-                        <div>
+                        <div class="scrollable-list__line">
                             {{ post.body }}
                         </div>
                     </li>
