--- a/src/styles/scrollable-list.scss
+++ b/src/styles/scrollable-list.scss
@@ -1,6 +1,6 @@
 .scrollable-list {
     background: var(--bs-gray-100);
-    --gap: 5px 10px;
+    --gap: 5px 15px;
 
     &__title {
         padding: var(--gap);
@@ -8,13 +8,20 @@
     }
 
     &__entries {
+        display: flex;
+        flex-direction: column;
         list-style-type: none;
         padding-left: 0;
         margin: 0;
     }
 
     &__entry {
-        padding: var(--gap);
+        margin: var(--gap);
+        min-height: 35px;
+    }
+
+    &__line {
+        display: block;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
