--- a/src/styles/scrollable-list.scss
+++ b/src/styles/scrollable-list.scss
@@ -26,7 +26,7 @@
     &__line {
         display: block;
         overflow: hidden;
-        // white-space: nowrap;
+        white-space: nowrap;
         text-overflow: ellipsis;
     }
 }
