--- a/src/app/components/page-user/page-user.component.html
+++ b/src/app/components/page-user/page-user.component.html
@@ -10,42 +10,44 @@
         </div>
     </ng-container>
 
-    <div class="page-user__tiles">
-        <div class="page-user__tile">
-            <div class="scrollable-list">
-                <h4 class="scrollable-list__title">
-                    Albums
-                </h4>
-                <ul class="scrollable-list__entries"
-                    *ngIf="albums$ | async as albums">
-                    <li class="scrollable-list__entry"
-                        *ngFor="let album of albums">
-                        <a class="scrollable-list__line"
-                            [routerLink]="['/albums/' + album.id]">
-                            {{ album.title }}
-                        </a>
-                    </li>
-                </ul>
+    <div class="responsive-tiles">
+        <div class="responsive-tiles__entries">
+            <div class="responsive-tiles__entry">
+                <div class="scrollable-list">
+                    <h4 class="scrollable-list__title">
+                        Albums
+                    </h4>
+                    <ul class="scrollable-list__entries"
+                        *ngIf="albums$ | async as albums">
+                        <li class="scrollable-list__entry"
+                            *ngFor="let album of albums">
+                            <a class="scrollable-list__line"
+                                [routerLink]="['/albums/' + album.id]">
+                                {{ album.title }}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="page-user__tile">
-            <div class="scrollable-list">
-                <h4 class="scrollable-list__title">
-                    Posts
-                </h4>
-                <ul class="scrollable-list__entries"
-                    *ngIf="posts$ | async as posts">
-                    <li class="scrollable-list__entry"
-                        *ngFor="let post of posts">
-                        <a class="scrollable-list__line"
-                            [routerLink]="['/posts/' + post.id]">
-                            {{ post.title }}
-                        </a>
-                        <div class="scrollable-list__line">
-                            {{ post.body }}
-                        </div>
-                    </li>
-                </ul>
+            <div class="responsive-tiles__entry">
+                <div class="scrollable-list">
+                    <h4 class="scrollable-list__title">
+                        Posts
+                    </h4>
+                    <ul class="scrollable-list__entries"
+                        *ngIf="posts$ | async as posts">
+                        <li class="scrollable-list__entry"
+                            *ngFor="let post of posts">
+                            <a class="scrollable-list__line"
+                                [routerLink]="['/posts/' + post.id]">
+                                {{ post.title }}
+                            </a>
+                            <div class="scrollable-list__line">
+                                {{ post.body }}
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
