--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -9,5 +9,35 @@
             </h1>
         </div>
     </ng-container>
-    Dashboard will be here
+    <div class="responsive-tiles">
+        <div class="responsive-tiles__entries">
+            <div class="responsive-tiles__entry">
+                <div class="scrollable-container">
+                    <h4 class="scrollable-container__title">
+                        Statistics
+                    </h4>
+                    <div class="scrollable-container__content">
+                    </div>
+                </div>
+            </div>
+            <div class="responsive-tiles__entry">
+                <div class="scrollable-container">
+                    <h4 class="scrollable-container__title">
+                        Latest Posts
+                    </h4>
+                    <div class="scrollable-container__content">
+                    </div>
+                </div>
+            </div>
+            <div class="responsive-tiles__entry">
+                <div class="scrollable-container">
+                    <h4 class="scrollable-container__title">
+                        Recent Photos
+                    </h4>
+                    <div class="scrollable-container__content">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </app-layout-page-bold-header>
