--- a/src/app/components/page-dashboard/page-dashboard.component.scss
+++ b/src/app/components/page-dashboard/page-dashboard.component.scss
@@ -1,1 +1,3 @@
 @import '../../../styles/main-banner.scss';
+@import '../../../styles/responsive-tiles';
+@import '../../../styles/scrollable-container';
