--- a/src/styles/column-list.scss
+++ b/src/styles/column-list.scss
@@ -1,17 +1,5 @@
-.scrollable-list {
-    background: var(--bs-gray-100);
-    border: 1px solid var(--bs-gray-300);
-    --gap: 10px 15px;
-
-    &__title {
-        padding: var(--gap);
-        background: var(--bs-gray-300);
-        margin-bottom: 0;
-    }
-
+.column-list {
     &__entries {
-        overflow-y: scroll;
-        max-height: 400px;
         display: flex;
         flex-direction: column;
         list-style-type: none;
