--- a/src/app/components/page-dashboard/page-dashboard.component.scss
+++ b/src/app/components/page-dashboard/page-dashboard.component.scss
@@ -1,3 +1,4 @@
 @import '../../../styles/main-banner.scss';
 @import '../../../styles/responsive-tiles';
 @import '../../../styles/scrollable-container';
+@import '../../../styles/statistics';
