--- a/src/styles/scrollable-container.scss
+++ b/src/styles/scrollable-container.scss
@@ -3,6 +3,12 @@
     border: 1px solid var(--bs-gray-300);
     --gap: 10px 15px;
 
+    &--autoscroll {
+        .scrollable-container__content {
+            overflow-y: auto;
+        }
+    }
+
     &__title {
         padding: var(--gap);
         background: var(--bs-gray-300);
