--- a/src/app/components/page-dashboard/page-dashboard.component.html
+++ b/src/app/components/page-dashboard/page-dashboard.component.html
@@ -12,11 +12,40 @@
     <div class="responsive-tiles">
         <div class="responsive-tiles__entries">
             <div class="responsive-tiles__entry">
-                <div class="scrollable-container">
+                <div class="scrollable-container scrollable-container--autoscroll">
                     <h4 class="scrollable-container__title">
                         Statistics
                     </h4>
                     <div class="scrollable-container__content">
+                        <div class="statistics">
+                            <ul class="statistics__entries">
+                                <li class="statistics__entry">
+                                    <div class="statistics__number">
+                                        123
+                                    </div>
+                                    <div class="statistics__description">
+                                        Posts
+                                    </div>
+                                </li>
+                                <li class="statistics__entry">
+                                    <div class="statistics__number">
+                                        123
+                                    </div>
+                                    <div class="statistics__description">
+                                        Albums
+                                    </div>
+                                </li>
+                                <li class="statistics__entry">
+                                    <div class="statistics__number">
+                                        123
+                                    </div>
+                                    <div class="statistics__description">
+                                        Photos
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
             </div>
